package main.utility;

public interface IMenuManager {
    public int menuItem();
}
